--- a/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.html
+++ b/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.html
@@ -1,12 +1,71 @@
 <div class="header">
   <h1>Custom Game</h1>
+  <mat-divider></mat-divider>
 </div>
-<mat-divider></mat-divider>
-<mat-tab-group class="tab-group" (selectedIndexChange)="onTabChanged($event)">
-  <mat-tab>
-    <ng-template mat-tab-label> Create </ng-template>
-  </mat-tab>
-  <mat-tab>
-    <ng-template mat-tab-label> Join </ng-template>
-  </mat-tab>
-</mat-tab-group>
+<div class="top-div">
+  <mat-grid-list cols="2" rowHeight="100%">
+    <mat-grid-tile class="team1">
+      <h2>Team 1</h2>
+      <mat-card class="player-row">
+        <mat-card-content>Simple card</mat-card-content>
+      </mat-card>
+      <mat-card class="player-row">
+        <mat-card-content>Simple card</mat-card-content>
+      </mat-card>
+      <mat-card class="player-row">
+        <mat-card-content>Simple card</mat-card-content>
+      </mat-card>
+      <mat-card class="player-row">
+        <mat-card-content>Simple card</mat-card-content>
+      </mat-card>
+      <mat-card class="player-row">
+        <mat-card-content>Simple card</mat-card-content>
+      </mat-card>
+      <mat-card class="player-row">
+        <mat-card-content>Simple card</mat-card-content>
+      </mat-card>
+    </mat-grid-tile>
+    <mat-grid-tile class="team2">
+      <h2>Team 2</h2>
+      <mat-card class="player-row">
+        <mat-card-content>Simple card</mat-card-content>
+      </mat-card>
+      <mat-card class="player-row">
+        <mat-card-content>Simple card</mat-card-content>
+      </mat-card>
+      <mat-card class="player-row">
+        <mat-card-content>Simple card</mat-card-content>
+      </mat-card>
+      <mat-card class="player-row">
+        <mat-card-content>Simple card</mat-card-content>
+      </mat-card>
+      <mat-card class="player-row">
+        <mat-card-content>Simple card</mat-card-content>
+      </mat-card>
+      <mat-card class="player-row">
+        <mat-card-content>Simple card</mat-card-content>
+      </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
+<div class="bottom-div">
+  <mat-grid-list cols="3" rowHeight="100%">
+    <mat-grid-tile class="chat">
+      <app-lobby-chat-box class="lobby-chat-box"></app-lobby-chat-box>
+    </mat-grid-tile>
+    <mat-grid-tile class="custom-start">
+      <ng-container>
+        <div class="start-button">
+          <button
+            class="start-button"
+            mat-raised-button
+            color="primary"
+            (click)="start()">
+            Start
+          </button>
+        </div>
+      </ng-container>
+    </mat-grid-tile>
+    <mat-grid-tile class="map"> Hello </mat-grid-tile>
+  </mat-grid-list>
+</div>
