--- a/angular-client/src/app/components/match-making/lobby/lobby.component.html
+++ b/angular-client/src/app/components/match-making/lobby/lobby.component.html
@@ -29,7 +29,7 @@
             class="start-button"
             mat-raised-button
             color="primary"
-            routerLink="/babylonjs"
+            routerLink="/custom-game"
             (click)="start()">
             Start
           </button>
