--- a/angular-client/src/app/components/match-making/match-making-sidenav/match-making-sidenav.component.html
+++ b/angular-client/src/app/components/match-making/match-making-sidenav/match-making-sidenav.component.html
@@ -1,10 +1,17 @@
-<app-normal-game-match-making
-  *ngIf="(gameType$ | async) === 'Normal'"></app-normal-game-match-making>
-<app-ranked-game-match-making
-  *ngIf="(gameType$ | async) === 'Ranked'"></app-ranked-game-match-making>
-<app-custom-game-match-making
-  *ngIf="(gameType$ | async) === 'Custom'"></app-custom-game-match-making>
-<app-money-match-game-match-making
-  *ngIf="
-    (gameType$ | async) === 'Money Match'
-  "></app-money-match-game-match-making>
+<ng-container *ngIf="gameType$ | async as gameType">
+  <ng-template [ngIf]="gameType === 'Normal'">
+    <app-normal-game-match-making></app-normal-game-match-making>
+  </ng-template>
+
+  <ng-template [ngIf]="gameType === 'Ranked'">
+    <app-ranked-game-match-making></app-ranked-game-match-making>
+  </ng-template>
+
+  <ng-template [ngIf]="gameType === 'Custom'">
+    <app-custom-game-settings></app-custom-game-settings>
+  </ng-template>
+
+  <ng-template [ngIf]="gameType === 'Money Match'">
+    <app-money-match-game-match-making></app-money-match-game-match-making>
+  </ng-template>
+</ng-container>
