--- a/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.html
+++ b/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.html
@@ -6,44 +6,19 @@
   <mat-grid-list cols="2" rowHeight="100%">
     <mat-grid-tile class="team1">
       <h2>Team 1</h2>
-      <mat-card class="player-row">
-        <mat-card-content>Simple card</mat-card-content>
-      </mat-card>
-      <mat-card class="player-row">
-        <mat-card-content>Simple card</mat-card-content>
-      </mat-card>
-      <mat-card class="player-row">
-        <mat-card-content>Simple card</mat-card-content>
-      </mat-card>
-      <mat-card class="player-row">
-        <mat-card-content>Simple card</mat-card-content>
-      </mat-card>
-      <mat-card class="player-row">
-        <mat-card-content>Simple card</mat-card-content>
-      </mat-card>
-      <mat-card class="player-row">
-        <mat-card-content>Simple card</mat-card-content>
+      <mat-card *ngFor="let row of team1Rows" class="player-row">
+        <mat-card-content>
+          {{ row.player?.username || 'Empty Slot' }}
+        </mat-card-content>
       </mat-card>
     </mat-grid-tile>
+
     <mat-grid-tile class="team2">
       <h2>Team 2</h2>
-      <mat-card class="player-row">
-        <mat-card-content>Simple card</mat-card-content>
-      </mat-card>
-      <mat-card class="player-row">
-        <mat-card-content>Simple card</mat-card-content>
-      </mat-card>
-      <mat-card class="player-row">
-        <mat-card-content>Simple card</mat-card-content>
-      </mat-card>
-      <mat-card class="player-row">
-        <mat-card-content>Simple card</mat-card-content>
-      </mat-card>
-      <mat-card class="player-row">
-        <mat-card-content>Simple card</mat-card-content>
-      </mat-card>
-      <mat-card class="player-row">
-        <mat-card-content>Simple card</mat-card-content>
+      <mat-card *ngFor="let row of team2Rows" class="player-row">
+        <mat-card-content>
+          {{ row.player?.username || 'Empty Slot' }}
+        </mat-card-content>
       </mat-card>
     </mat-grid-tile>
   </mat-grid-list>
