--- a/angular-client/src/app/components/match-making/lobby/lobby.component.html
+++ b/angular-client/src/app/components/match-making/lobby/lobby.component.html
@@ -29,9 +29,8 @@
             class="start-button"
             mat-raised-button
             color="primary"
-            routerLink="/custom-game"
             (click)="start()">
-            Start
+            {{ startButtonText }}
           </button>
         </div>
       </ng-container>
