--- a/angular-client/src/app/components/misc/status-bubble/status-bubble.component.html
+++ b/angular-client/src/app/components/misc/status-bubble/status-bubble.component.html
@@ -2,6 +2,6 @@
   *ngIf="presence === 'Online'"
   class="status-bubble"
   [toolTipText]="toolTipText"
-  [infoText]="status?.activity"
+  [infoText]="activity"
   [color]="color">
 </app-info-bubble>
