--- a/angular-client/src/app/components/social/chat-box/chat-box.component.html
+++ b/angular-client/src/app/components/social/chat-box/chat-box.component.html
@@ -47,8 +47,10 @@
       <app-status-bubble
         *ngIf="panelOpenState"
         class="status-bubble"
-        [status]="friend.status"
-        [presence]="friend.presence">
+        [activity]="friend?.activity"
+        [queueType]="friend?.queueType"
+        [gameType]="friend?.gameType"
+        [presence]="friend?.presence">
       </app-status-bubble>
       <mat-hint class="hint"> {{ input.value.length || 0 }}/250 </mat-hint>
     </div>
