Fix spacing of chat box. Add dummy map pic and description

--- a/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.html
+++ b/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.html
@@ -41,6 +41,9 @@
         </div>
       </ng-container>
     </mat-grid-tile>
-    <mat-grid-tile class="map"> Hello </mat-grid-tile>
+    <mat-grid-tile class="map">
+      <h2>Bucheon - Money Ball</h2>
+      <img src="/assets/qwicki-background.png" alt="map" />
+    </mat-grid-tile>
   </mat-grid-list>
 </div>
