--- a/angular-client/src/app/components/match-making/lobby-chat-box/lobby-chat-box.component.html
+++ b/angular-client/src/app/components/match-making/lobby-chat-box/lobby-chat-box.component.html
@@ -26,7 +26,7 @@
       >
     </div>
   </div>
-  <div class="input-area">
+  <div class="lobby-chat-box-input-area">
     <mat-form-field class="input-field">
       <mat-label>Chat</mat-label>
       <input
