--- a/angular-client/src/app/components/match-making/match-making-sidenav/match-making-sidenav.component.html
+++ b/angular-client/src/app/components/match-making/match-making-sidenav/match-making-sidenav.component.html
@@ -9,7 +9,7 @@
   </ng-template>
 
   <ng-template
-    [ngIf]="data.gameType === 'Custom' && data.route === 'custom-game'">
+    [ngIf]="data.gameType === 'Custom' && data.route === '/custom-game'">
     <app-custom-game-settings></app-custom-game-settings>
   </ng-template>
 
