--- a/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.css
+++ b/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.css
@@ -1,15 +1,15 @@
 .header {
-  background-color: purple;
+  /* background-color: purple; */
   height: 5%;
 }
 
 .top-div {
-  background-color: blue;
+  /* background-color: blue; */
   height: 65%;
 }
 
 ::ng-deep .team1 .mat-grid-tile-content {
-  background-color: maroon;
+  /* background-color: maroon; */
   display: flex;
   flex-direction: column;
   padding: 8px;
@@ -17,7 +17,7 @@
 }
 
 ::ng-deep .team2 .mat-grid-tile-content {
-  background-color: mediumaquamarine;
+  /* background-color: mediumaquamarine; */
   display: flex;
   flex-direction: column;
   padding: 8px;
@@ -25,13 +25,13 @@
 }
 
 .player-row {
-  background-color: deeppink;
+  /* background-color: deeppink; */
   width: 100%;
   margin: 8px;
 }
 
 .bottom-div {
-  background-color: red;
+  /* background-color: red; */
   height: 30%;
 }
 
@@ -43,13 +43,13 @@
 }
 
 .lobby-chat-box {
-  background-color: green;
+  /* background-color: green; */
   height: 100%;
   width: 100%;
 }
 
 ::ng-deep .custom-start .mat-grid-tile-content {
-  background-color: orange;
+  /* background-color: orange; */
   padding: 16px;
   display: flex;
   flex-direction: column;
@@ -62,7 +62,7 @@
 }
 
 ::ng-deep .map .mat-grid-tile-content {
-  background-color: pink;
+  /* background-color: pink; */
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -73,4 +73,12 @@
   width: 100%;
   height: auto;
   object-fit: cover;
+}
+
+.map .map-info {
+  align-self: flex-start;
+  padding: 10px;
+  color: #ffffff;
+  font-size: 1.4em;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
