Separate out empty player row to its own component

--- a/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.css
+++ b/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.css
@@ -25,9 +25,7 @@
 }
 
 .player-row {
-  /* background-color: deeppink; */
   width: 100%;
-  margin: 8px;
 }
 
 .bottom-div {
@@ -76,6 +74,8 @@
 }
 
 .map .map-info {
+  background-color: var(--purple-opacity-30);
+  width: 100%;
   align-self: flex-start;
   padding: 10px;
   color: #ffffff;
