--- a/angular-client/src/styles.css
+++ b/angular-client/src/styles.css
@@ -3,6 +3,7 @@
 :root {
     --dark: #212529;
     --purple: #7b1fa2;
+    --purple-opacity-30: rgba(123, 31, 162, 0.3); 
     --title-text-color: aliceblue;
     --subtitle-text-color: rgba(255, 255, 255, 0.7);
 }
