Remove margin between rows to allow for more space in the event of supporting higher player counts

--- a/angular-client/src/app/components/match-making/empty-player-row/empty-player-row.component.html
+++ b/angular-client/src/app/components/match-making/empty-player-row/empty-player-row.component.html
@@ -1,4 +1,4 @@
-<mat-card class="empty-player-row">
+<mat-card appBorder class="empty-player-row">
   <mat-card-content>
     <app-invite-friend-menu></app-invite-friend-menu>
   </mat-card-content>
