--- a/angular-client/src/app/components/match-making/player-row/player-row.component.html
+++ b/angular-client/src/app/components/match-making/player-row/player-row.component.html
@@ -1,4 +1,4 @@
-<mat-card class="player-row">
+<mat-card appBorder class="player-row">
   <mat-card-content>
     {{ player?.username }}
   </mat-card-content>
