--- a/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.css
+++ b/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.css
@@ -6,22 +6,14 @@
 .top-div {
   /* background-color: blue; */
   height: 65%;
+  padding: 8px;
 }
 
-::ng-deep .team1 .mat-grid-tile-content {
+::ng-deep .team .mat-grid-tile-content {
   /* background-color: maroon; */
   display: flex;
   flex-direction: column;
   padding: 8px;
-  padding-left: 16px;
-}
-
-::ng-deep .team2 .mat-grid-tile-content {
-  /* background-color: mediumaquamarine; */
-  display: flex;
-  flex-direction: column;
-  padding: 8px;
-  padding-right: 16px;
 }
 
 .player-row {
@@ -31,13 +23,6 @@
 .bottom-div {
   /* background-color: red; */
   height: 30%;
-}
-
-.lobby-panel {
-  height: 100%;
-  width: 100%;
-  padding: 8px;
-  padding-top: 16px;
 }
 
 .lobby-chat-box {
