Sending of proper invite works

--- a/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.html
+++ b/angular-client/src/app/components/match-making/custom-game-match-making/custom-game-match-making.component.html
@@ -25,7 +25,8 @@
             [player]="row.player"></app-player-row>
           <app-empty-player-row
             class="player-row"
-            *ngIf="!row.player"></app-empty-player-row>
+            *ngIf="!row.player"
+            [team]="dynamicTeam.team"></app-empty-player-row>
         </ng-container>
       </mat-grid-tile>
     </mat-grid-list>
