--- a/angular-client/src/app/components/match-making/empty-player-row/empty-player-row.component.html
+++ b/angular-client/src/app/components/match-making/empty-player-row/empty-player-row.component.html
@@ -1,5 +1,5 @@
 <mat-card appBorder class="empty-player-row">
   <mat-card-content>
-    <app-invite-friend-menu></app-invite-friend-menu>
+    <app-invite-friend-menu [invite]="invite"></app-invite-friend-menu>
   </mat-card-content>
 </mat-card>
