--- a/angular-client/src/app/components/match-making/invite-friend-menu/invite-friend-menu.component.html
+++ b/angular-client/src/app/components/match-making/invite-friend-menu/invite-friend-menu.component.html
@@ -24,7 +24,7 @@
       <button
         mat-menu-item
         *ngFor="let friend of filteredFriends$ | async"
-        (click)="invite(friend)">
+        (click)="sendInvite(friend)">
         <app-presence
           class="presence"
           [presence]="friend?.presence"></app-presence>
