--- a/angular-client/src/app/components/match-making/lobby-panel/lobby-panel.component.html
+++ b/angular-client/src/app/components/match-making/lobby-panel/lobby-panel.component.html
@@ -90,6 +90,7 @@
         (click)="inviteFriendMenu.openMenu()">
         <app-invite-friend-menu
           [toolTipText]="null"
+          [invite]="invite"
           #inviteFriendMenu></app-invite-friend-menu>
       </div>
     </ng-template>
